--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <div class="relative container grid mx-auto px-16 pt-8 mt-36 grid-cols-1 md:grid-cols-2">
             <!-- Image -->
              <div class="place-items-center">
-                <img id="rencePic" src="/assets/v2-clarence.jpg" alt="Clarence Velasco" class="rounded-full outline outline-1 outline-accentColor outline-offset-4 w-40 md:w-72 md">
+                <img id="rencePic" src="assets/v2-clarence.jpg" alt="Clarence Velasco" class="rounded-full outline outline-1 outline-accentColor outline-offset-4 w-40 md:w-72 md">
             </div>
             <div id="aboutContainer" class="content-center sm:items-center">
                 <!-- About Text -->
@@ -83,7 +83,7 @@
             <!--Project 1-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden">
-                    <img id="project1-image" src="/assets/arcane.jpg" alt="Project 1" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project1-image" src="assets/arcane.jpg" alt="Project 1" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
@@ -96,7 +96,7 @@
             <!--Project 2-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden">
-                    <img id="project2-image" src="/assets/malikhaying.jpg" alt="Project 2" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project2-image" src="assets/malikhaying.jpg" alt="Project 2" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
@@ -109,7 +109,7 @@
             <!--Project 3-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden group">
-                    <img id="project3-image" src="/assets/bio polo shirt.jpg" alt="Project 3" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project3-image" src="assets/bio-polo-shirt.jpg" alt="Project 3" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
@@ -122,7 +122,7 @@
             <!--Project 4-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden group">
-                    <img id="project4-image" src="/assets/bini mikha.jpg" alt="Project 4" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project4-image" src="assets/bini-mikha.jpg" alt="Project 4" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
@@ -135,7 +135,7 @@
             <!--Project 5-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden group">
-                    <img id="project5-image" src="/assets/carlos sainz.jpg" alt="Project 5" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project5-image" src="assets/carlos-sainz.jpg" alt="Project 5" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
@@ -148,7 +148,7 @@
             <!--Project 6-->
             <div id="projects" class="bg-lighterBlack rounded-lg shadow-md overflow-hidden group">
                 <div class="relative overflow-hidden group">
-                    <img id="project6-image" src="/assets/bagwis.jpg" alt="Project 6" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
+                    <img id="project6-image" src="assets/bagwis.jpg" alt="Project 6" class="w-full h-96 object-cover rounded-t-lg group-hover:scale-110 transition-scale duration-300">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 cursor-pointer "></div>
                 </div>
                 <div class="p-4">
