Added gsap scrollTo function

--- a/public/index.html
+++ b/public/index.html
@@ -25,22 +25,22 @@
         <div class="flex items-center justify-center">
             <div class="hidden md:flex space-x-14">
                 <div id="topnav">
-                    <a href="#" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Home</a>
+                    <a href="#" id="menu-item" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Home</a>
                 </div>
                 <div id="topnav">
-                    <a href="#" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">About</a>
+                    <a href="#" id="menu-item" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">About</a>
                 </div>
                 <div id="topnav">
-                    <a href="#" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Projects</a>
+                    <a href="#" id="menu-item" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Projects</a>
                 </div>
                 <div id="topnav">
-                    <a href="#" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Contact</a>
+                    <a href="#" id="menu-item" class="text-white text-lg font-medium transition ease-in-out duration-200 hover:text-gray-400">Contact</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <section id="hero">
+    <section id="section-1">
         <!-- Hero Section -->
         <div class="relative mx-auto bg-bg1 mb-5 bg-bottom bg-cover backdrop-blur-lg md:p-2">
             <div class="m-10 md:m-30 md:mb-50 lg:m-60">
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section id="about">
+    <section id="section-2" class="bg-slate-500">
         <!-- About Container -->
         <div class="relative container grid mx-auto px-16 pt-8 mt-36 grid-cols-1 md:grid-cols-2">
             <!-- Image -->
@@ -72,7 +72,7 @@
     </section>
     
     <!-- Projects Section -->
-    <section >
+    <section id="section-3">
         <div  class="relative container grid gap-8 mx-auto mt-60 p-4 pt-4 grid-cols-1 md:grid-cols-3">
 
             <!--Header-->
@@ -161,7 +161,7 @@
     </section>
 
     <!-- Contact Me -->
-    <section id="contact">
+    <section id="section-4">
         <div class="relative container grid grid-cols-5 gap-4 mx-auto mt-60 p-24 bg-darkmode2 rounded-t-xl">
             <!-- Header -->
             <div class="col-span-5">
