--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section id="section-2" class="bg-slate-500">
+    <section id="section-2">
         <!-- About Container -->
         <div class="relative container grid mx-auto px-16 pt-8 mt-36 grid-cols-1 md:grid-cols-2">
             <!-- Image -->
