Added dynamic navbar styles

--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
 
     <!-- Contact Me -->
     <section id="section-4">
-        <div class="relative container grid grid-cols-5 gap-4 mx-auto mt-60 p-24 bg-darkmode2 rounded-t-xl">
+        <div class="container grid grid-cols-5 gap-4 mx-auto mt-60 mb-16 p-36 bg-darkmode2 rounded-t-xl">
             <!-- Header -->
             <div class="col-span-5">
                 <h2 class="text-4xl text-white font-bold text-center">Contact</h1>
