Fixed nav, added hero section

--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,18 @@
         <div id="navElements" class="flex flex-row w-169">
             <h6 class="font-semibold basis-3/4">Clarence Velasco</h6>
             <div id="navButtons" class="flex flex-row basis-1/4">
-                <h6 class="basis-64">About</h6>
-                <h6 class="basis-64">Work</h6>
-                <h6 class="basis-64">Let's Talk</h6>
+                <a class="basis-64" href=""><h6>About</h6></a>
+                <a class="basis-64" href=""><h6>Work</h6></a>
+                <a class="basis-64" href=""><h6>Let's Talk</h6></a>
             </div>
        </div>
     </nav>
 
     <section id="section-1">
         <!-- Hero Section -->
-        <div class="">
-
+        <div class="mx-20 px-20 py-35 place-items-center">
+            <h1 class="font-extrabold text-[61.04px] text-customGray">I'm John Doe</h1>
+            <h1 class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
         </div>
     </section>
 
