Added about me section

--- a/public/index.html
+++ b/public/index.html
@@ -25,26 +25,36 @@
     <nav id="navbar" class="rounded-[15px] bg-lightMode w-169 z-50 h-20 mx-20 mt-4 p-6 drop-shadow-lg">
         <div id="navElements" class="flex flex-row w-169">
             <h6 class="font-semibold basis-3/4">Clarence Velasco</h6>
-            <div id="navButtons" class="flex flex-row basis-1/4">
-                <a class="basis-64" href=""><h6>About</h6></a>
-                <a class="basis-64" href=""><h6>Work</h6></a>
-                <a class="basis-64" href=""><h6>Let's Talk</h6></a>
+            <div id="navButtons" class="flex flex-row basis-1/4 justify-evenly">
+                <a href=""><h6>About</h6></a>
+                <a href=""><h6>Work</h6></a>
+                <a href=""><h6>Let's Talk</h6></a>
             </div>
        </div>
     </nav>
 
     <section id="section-1">
         <!-- Hero Section -->
-        <div class="mx-20 px-20 py-35 place-items-center">
+        <div class="h-80 mx-20 my-20 p-6 place-items-center">
             <h1 class="font-extrabold text-[61.04px] text-customGray">I'm John Doe</h1>
             <h1 class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
+        </div>
+        <div class="place-items-center mt-80">
+            <p>Crafted with Code and Creativity</p>
+            <p class="mt-3"><i class="fa-solid fa-circle-arrow-down text-2xl"></i></p>
         </div>
     </section>
 
     <section id="section-2">
         <!-- About Container -->
-        <div class=" ">
-           
+        <div class="bg-red-400 grid grid-cols-2 mx-20 h-auto p-12">
+           <div id="image" class="grid place-content-center">
+                <div id="img-placeholder" class=" bg-slate-400 w-[438px] h-[512px]"></div>
+           </div>
+           <div class="grid bg-blue-100 content-center pr-20">
+                <h1 class="font-semibold text-[39.06px]">About Me</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero doloribus exercitationem commodi impedit, reprehenderit corporis nesciunt optio saepe quod, ducimus aliquid. Explicabo earum at unde quos qui soluta maxime.</p>
+           </div>
         </div>
     </section>
     
