Adding poster designs as of 2:09 p.m.

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
 
     <section id="section-2">
         <!-- About Container -->
-        <div class="bg-red-400 grid grid-cols-2 mx-20 h-auto p-12">
+        <div class="bg-red-400 grid grid-cols-2 mx-20 h-auto p-12 mt-11">
            <div id="image" class="grid place-content-center">
-                <div id="img-placeholder" class=" bg-slate-400 w-[438px] h-[512px]"></div>
+                <div id="img-placeholder" class=" bg-slate-400 w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"></div>
            </div>
            <div class="grid bg-blue-100 content-center pr-20">
                 <h1 class="font-semibold text-[39.06px]">About Me</h1>
@@ -60,7 +60,18 @@
     
     <!-- Projects Section -->
     <section id="section-3">
-        
+        <div class="grid bg-blue-500 mx-20 h-svh place-content-center">
+            <h1 class="text-8xl font-medium">Explore My Works</h1>
+        </div>
+        <div class="grid grid-cols-3 gap-2 mx-20 h-auto">
+            <div class="col-span-1 bg-slate-500">
+                <h3 class="text-[61.04px] font-semibold">Poster Design</h3>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/arcane.jpg" alt="" class="rounded-[12px] drop-shadow-lg">
+            </div>
+
+        </div>
     </section>
 
     <!-- Contact Me -->
