Finished Poster Section, only text remaining

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <section id="section-1">
         <!-- Hero Section -->
         <div class="h-80 mx-20 my-20 p-6 place-items-center">
-            <h1 class="font-extrabold text-[61.04px] text-customGray">I'm John Doe</h1>
+            <h1 class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
             <h1 class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
         </div>
         <div class="place-items-center mt-80">
@@ -47,11 +47,11 @@
 
     <section id="section-2">
         <!-- About Container -->
-        <div class="bg-red-400 grid grid-cols-2 mx-20 h-auto p-12 mt-11">
+        <div class="grid grid-cols-2 mx-20 h-auto p-12 mt-11">
            <div id="image" class="grid place-content-center">
-                <div id="img-placeholder" class=" bg-slate-400 w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"></div>
+                <div id="img-placeholder" class="w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"><img src="assets/clarence.jpg" alt="Clarence Velasco" class=" rounded-[15px]" loading="lazy"></div>
            </div>
-           <div class="grid bg-blue-100 content-center pr-20">
+           <div class="grid content-center pr-20">
                 <h1 class="font-semibold text-[39.06px]">About Me</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero doloribus exercitationem commodi impedit, reprehenderit corporis nesciunt optio saepe quod, ducimus aliquid. Explicabo earum at unde quos qui soluta maxime.</p>
            </div>
@@ -60,17 +60,35 @@
     
     <!-- Projects Section -->
     <section id="section-3">
-        <div class="grid bg-blue-500 mx-20 h-svh place-content-center">
+        <div class="grid mx-20 h-svh place-content-center">
             <h1 class="text-8xl font-medium">Explore My Works</h1>
         </div>
-        <div class="grid grid-cols-3 gap-2 mx-20 h-auto">
-            <div class="col-span-1 bg-slate-500">
+        <div class="grid grid-cols-3 grid-rows-2 gap-5 gap-y-16 mx-20 h-auto">
+            <div class="col-span-1 relative">
+                <div class="absolute top-0 right-0 flex flex-col items-end"></div>
                 <h3 class="text-[61.04px] font-semibold">Poster Design</h3>
+                <img src="assets/down-right-arrow.png" alt="" class="absolute h-16">
             </div>
             <div class="col-span-1">
-                <img src="assets/arcane.jpg" alt="" class="rounded-[12px] drop-shadow-lg">
+                <img src="assets/alex.jpg" alt="Alex Eala Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray">Alex Eala Poster</p>
             </div>
-
+            <div class="col-span-1">
+                <img src="assets/arcane.jpg" alt="Arcane Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray">Arcane Poster</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/carlos-sainz.jpg" alt="Carlos Sainz Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray">Carlos Sainz Poster</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/okc.jpg" alt="2025 NBA Champions Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray">2025 NBA Champions Poster</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/mikha.jpg" alt="BINI Mikha Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray">BINI Mikha Poster</p>
+            </div>
         </div>
     </section>
 
