Completed Projects Content

--- a/public/index.html
+++ b/public/index.html
@@ -63,33 +63,193 @@
         <div class="grid mx-20 h-svh place-content-center">
             <h1 class="text-8xl font-medium">Explore My Works</h1>
         </div>
-        <div class="grid grid-cols-3 grid-rows-2 gap-5 gap-y-16 mx-20 h-auto">
-            <div class="col-span-1 relative">
-                <div class="absolute top-0 right-0 flex flex-col items-end"></div>
-                <h3 class="text-[61.04px] font-semibold">Poster Design</h3>
-                <img src="assets/down-right-arrow.png" alt="" class="absolute h-16">
+
+        <!-- Poster Designs -->
+        <div id="poster-design" class="grid grid-cols-3 grid-rows-2 gap-x-5 gap-y-16 mx-20 h-auto">
+            <div class="col-span-1">
+                <div class="grid grid-rows-2">
+                    <div class="row-span-1">
+                        <h3 class="text-[61.04px] font-semibold justify-self-end">Poster Design</h3>
+                    </div>
+                    <div class="row-span-1 flex flex-row-reverse">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                    </div>
+                </div>
             </div>
             <div class="col-span-1">
                 <img src="assets/alex.jpg" alt="Alex Eala Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
-                <p class="text-customGray">Alex Eala Poster</p>
+                <p class="text-customGray mt-2">Alex Eala Poster</p>
             </div>
             <div class="col-span-1">
                 <img src="assets/arcane.jpg" alt="Arcane Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
-                <p class="text-customGray">Arcane Poster</p>
+                <p class="text-customGray mt-2">Arcane Poster</p>
             </div>
             <div class="col-span-1">
                 <img src="assets/carlos-sainz.jpg" alt="Carlos Sainz Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
-                <p class="text-customGray">Carlos Sainz Poster</p>
+                <p class="text-customGray mt-2">Carlos Sainz Poster</p>
             </div>
             <div class="col-span-1">
                 <img src="assets/okc.jpg" alt="2025 NBA Champions Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
-                <p class="text-customGray">2025 NBA Champions Poster</p>
+                <p class="text-customGray mt-2">2025 NBA Champions Poster</p>
             </div>
             <div class="col-span-1">
                 <img src="assets/mikha.jpg" alt="BINI Mikha Poster" class="rounded-[12px] drop-shadow-lg" loading="lazy">
-                <p class="text-customGray">BINI Mikha Poster</p>
+                <p class="text-customGray mt-2">BINI Mikha Poster</p>
             </div>
         </div>
+        <!-- End of Poster Design -->
+
+        <!-- Logo Designs -->
+        <div id="logo-design" class="grid grid-cols-3 gap-x-5 gap-y-16 mx-20 mt-60 h-auto">
+            <div class="col-span-1">
+                <img src="assets/malikhaying.jpg" alt="Malikhaying Unofficial Rebrand" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Malikhaying Unofficial Rebranding</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/rv-creates.jpg" alt="RV Creates Official Logo" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">RV Creates Official Logo</p>
+            </div>
+            <div class="col-span-1">
+                <div class="grid-rows-2">
+                    <div class="row-span-1">
+                        <h3 class="text-[61.04px] font-semibold">Logo Design</h3>
+                    </div>
+                    <div class="row-span-1 flex flex-row">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of Logo Design -->
+
+
+        <!-- Merch Designs -->
+        <div id="merch-design" class="grid grid-cols-3 grid-rows-2 gap-x-5 gap-y-16 mx-20 mt-60 h-auto ">
+            <div class="col-span-1 ">
+                <div class="grid grid-rows-2">
+                    <div class="row-span-1">
+                            <h3 class="text-[61.04px] font-semibold justify-self-end">Merch Design</h3>
+                    </div>
+                    <div class="row-span-1 flex flex-row-reverse">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-span-1">
+                    <img src="assets/ics.png" alt="CNSC ICS Official Polo Shirt" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                    <p class="text-customGray mt-2">Camarines Norte State College - ICS Official Polo Shirt</p>
+            </div>
+             <div class="col-span-1">
+                    <img src="assets/organism.jpg" alt="CNSC Organism Official Polo Shirt" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                    <p class="text-customGray mt-2">Camarines Norte State College - Organism Official Polo Shirt</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/sole.jpg" alt="University of San Carlos Society of Language Enthusiasts Official Lanyard" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">University of San Carlos - Society of Language Enthusiasts Official Lanyard</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/pup-taguig.jpg" alt="PUP Taguig JPTIA Official Lanyard" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">PUP Taguig JPTIA Official Lanyard</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/socio-society.jpg" alt="CNSC Sociological Society Official Org Shirt" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Camarines Norte State College - Sociological Society Official Org Shirt</p>
+            </div>
+        </div>
+        <!-- End of Merch Design -->
+
+        <!-- Motion Design -->
+        <div id="motion-design" class="grid grid-cols-3 grid-rows-2 gap-x-5 gap-y-16 mx-20 mt-60 h-auto">
+            <div class="col-span-1">
+                <video src="assets/jennie.mp4" autoplay loop muted playsinline class="rounded-[12px] drop-shadow-lg"></video>
+            </div>
+            <div class="col-span-1 justify-items-center">
+                <video src="assets/blink-twice.mp4" autoplay loop muted playsinline class="rounded-[12px] drop-shadow-lg max-h-[425px]"></video>
+            </div>
+            <div class="col-span-1">
+                <div class="grid-rows-2">
+                    <div class="row-span-1">
+                        <h3 class="text-[61.04px] font-semibold">Motion Design</h3>
+                    </div>
+                    <div class="row-span-1 flex flex-row">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-left-arrow.png" alt="" class="h-16 justify-self-end">
+                    </div>
+                </div>
+            </div>
+            <div class="col-span-1">
+                <video src="assets/pasiklaban.mp4" autoplay loop muted playsinline class="rounded-[12px] drop-shadow-lg"></video>
+            </div>
+            <div class="col-span-1">
+                <video src="assets/pageant.mp4" autoplay loop muted playsinline class="rounded-[12px] drop-shadow-lg"></video>
+            </div>
+            <div class="col-span-1">
+                <video src="assets/pasuc.mp4" autoplay loop muted playsinline class="rounded-[12px] drop-shadow-lg"></video>
+            </div>
+         </div>
+         <!-- End of Motion Design -->
+
+
+
+
+         <!-- Magazines/Newsletters -->
+        <div class="grid grid-cols-3 gap-x-5 gap-y-16 mx-20 mt-60 h-auto">
+            <div class="col-span-1">
+                <div class="grid grid-rows-2">
+                    <div class="row-span-1">
+                        <h3 class="text-[61.04px] font-semibold justify-self-end text-right leading-[61px]">Magazines/<br>Newsletters</h3>
+                    </div>
+                    <div class="row-span-1 flex flex-row-reverse">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                        <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                    </div>
+                </div>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/bagwis.jpg" alt="Bagwis Front Page" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Bagwis Front Page</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/bagwis-2.jpg" alt="Bagwis News Page Snippet" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Bagwis News Page Snippet</p>
+            </div>
+        </div>
+         <!-- End of Magazines/Newsletters -->
+
+
+         <!-- Social Media Graphics -->
+        <div class="grid grid-cols-3 gap-x-5 gap-y-5 mx-20 mt-60 h-auto">
+            <div class="col-span-3 flex items-center">
+                <h3 class="text-[61.04px] font-semibold">Social Media Graphics</h3>
+                <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+                <img src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
+            </div>
+            <div class="col-span-1">
+                <img src="assets/spark.jpg" alt="Spark Social Media Post" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Spark Social Media Post</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/wallpaper.jpg" alt="RV Creates Free Wallpapers Instagram Post" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">RV Creates Free Wallpapers Instagram Post</p>
+            </div>
+            <div class="col-span-1">
+                <img src="assets/moodboard.jpg" alt="Moodboard Tutorial Instagram Post" class="rounded-[12px] drop-shadow-lg" loading="lazy">
+                <p class="text-customGray mt-2">Moodboard Tutorial Instagram Post</p>
+            </div>
+         </div>
+
+
+
     </section>
 
     <!-- Contact Me -->
