--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,19 @@
     
 
         <!-- Navigation Bar -->
-    <nav id="navbar" class="rounded-[15px] bg-lightMode w-169 z-50 h-20 mx-20 mt-4 p-6 drop-shadow-lg">
-        <div id="navElements" class="flex flex-row w-169">
-            <a href="#"><h6 class="font-semibold basis-3/4">Clarence Velasco</h6></a>
-            <div id="navButtons" class="flex flex-row basis-1/4 justify-evenly">
-                <a href=""><h6>About</h6></a>
-                <a href=""><h6>Work</h6></a>
-                <a href=""><h6>Let's Talk</h6></a>
+    <nav id="topnav" class="sticky top-2 rounded-[15px] bg-lightMode w-169 z-50 h-20 mx-20 mt-4 p-6 drop-shadow-xl border border-black">
+        <div id="navElements" class="flex flex-row justify-between w-169">
+            <a href="#"><h6 class="font-semibold">Clarence Velasco</h6></a>
+            <div id="navButtons" class="flex flex-row w-96 justify-evenly">
+                <div>
+                    <a href=""><h6>About</h6></a>
+                </div>
+                <div>
+                    <a href=""><h6>Work</h6></a>
+                </div>
+                <div>
+                    <a href=""><h6>Let's Talk</h6></a>
+                </div>
             </div>
        </div>
     </nav>
@@ -36,12 +42,12 @@
     <section id="section-1">
         <!-- Hero Section -->
         <div class="h-80 mx-20 my-20 p-6 place-items-center">
-            <h1 class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
-            <h1 class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
+            <h1 id="rence" class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
+            <h1 id="subtitle" class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
         </div>
         <div class="place-items-center mt-80">
-            <p>Crafted with Code and Creativity</p>
-            <p class="mt-3"><i class="fa-solid fa-circle-arrow-down text-2xl"></i></p>
+            <p id="crafted">Crafted with Code and Creativity</p>
+            <p id="crafted-arrow" class="mt-3"><i class="fa-solid fa-circle-arrow-down text-2xl"></i></p>
         </div>
     </section>
 
@@ -61,7 +67,7 @@
     <!-- Projects Section -->
     <section id="section-3">
         <div class="grid mx-20 h-svh place-content-center">
-            <h1 class="text-8xl font-medium">Explore My Works</h1>
+            <h1 class="text-8xl font-medium">Explore My Works <i class="fa-solid fa-circle-arrow-down"></i></h1>
         </div>
 
         <!-- Poster Designs -->
@@ -258,7 +264,7 @@
                         <div class="col-span-6 col-start-2">
                             <h3 class="text-[61.04px] font-semibold text-lightMode">Have a project in mind?</h3>
                             <p class="text-lightMode font-light">Let's work together. Every project starts with a conversation.</p>
-                            <button class="w-64 h-auto bg-accentColor text-lightMode font-semibold mt-8 p-6 rounded-[50px]"><a href="#">Let's Talk</a></button>
+                            <a href="https://www.linktr.ee/rvcreates" target="_blank"><button class="w-64 h-auto bg-accentColor text-lightMode font-semibold mt-8 p-6 rounded-[50px]">Let's Talk</button></a>
                             
                             <div class="col-start-2 col-span-3 flex mt-4">
                                 <img src="assets/up-right-arrow.png" alt="" class="h-16">
